2015-08-27  Matteo Corti  <matteo@corti.li>

	* check_cpu (load_module): dynamic choice of the ::Plugin modules

2010-04-09  Matteo Corti  <matteo.corti@id.ethz.ch>

	* check_cpu: print the wait value

2008-03-21  Matteo Corti  <matteo.corti@id.ethz.ch>

	* check_cpu: fixed the missing usage message

2008-02-22  Matteo Corti  <matteo.corti@id.ethz.ch>

	* check_cpu: corrected the usage message (--verbose and -v)

2007-11-13  Matteo Corti  <matteo.corti@id.ethz.ch>

	* Makefile.PL: included version.pm in the distribution

2007-10-31  Matteo Corti  <matteo.corti@id.ethz.ch>

        * Uses Nagios::Plugin
        * Compatible with embedded Perl
        * Fix to avoid permission conflict on temporary files
        * Verbose output
        * New packaging (uses EU::MM)        

2007-04-17  Matteo Corti  <matteo.corti@id.ethz.ch>

	* --silent: does not generate warning and critical reports

2007-03-27  Matteo Corti  <matteo.corti@id.ethz.ch>

	* Initial test release
