@@ -4,7 +4,7 @@
       "Matteo Corti <matteo.corti@id.ethz.ch>"
    ],
    "dynamic_config" : 0,
-   "generated_by" : "Module::Install version 1.06, CPAN::Meta::Converter version 2.150001",
+   "generated_by" : "Module::Install version 1.16, CPAN::Meta::Converter version 2.150010",
    "license" : [
       "open_source"
    ],
@@ -48,5 +48,6 @@
          "http://opensource.org/licenses/gpl-license.php"
       ]
    },
-   "version" : "1.1.0"
+   "version" : "1.1.3",
+   "x_serialization_backend" : "JSON::PP version 2.27400"
 }
