@@ -7,7 +7,7 @@ build_requires:
 configure_requires:
   ExtUtils::MakeMaker: '0'
 dynamic_config: 0
-generated_by: 'Module::Install version 1.06, CPAN::Meta::Converter version 2.150001'
+generated_by: 'Module::Install version 1.16, CPAN::Meta::Converter version 2.150010'
 license: open_source
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -27,4 +27,5 @@ requires:
   version: '0'
 resources:
   license: http://opensource.org/licenses/gpl-license.php
-version: 1.1.0
+version: 1.1.3
+x_serialization_backend: 'CPAN::Meta::YAML version 0.018'
