@@ -1,2 +1,3 @@
+2016-12-07 Added support for the new /proc/stat fields
 2007-04-17 --silent option
 2007-03-27 Initial release
